fix: Align footnote text
Put the marker outside.

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -51,9 +51,8 @@ $font-code: "Jetbrains Mono", monospace;
 }
 
 .footnotes-list {
-  list-style-position: inside;
   margin: 0;
-  padding: 0;
+  padding-left: 1.5em;
 
   li {
     margin-bottom: 1em;
